<?xml version="1.0"?>
<package>
  <name>um7</name>
  <version>0.0.1</version>
  <description>This package takes data from a CHRobotics UM7 IMU and publishes it to ROS</description>

  <maintainer email="nicholas.charabaruk@uoit.ca">Nick Charabaruk</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>serial</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>serial</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
